--- a/index.html
+++ b/index.html
@@ -1,159 +1,51 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Uber Pro GPS</title>
+// navigation-capacitor-ready.js
+// Usar esto en tu index.html o importarlo como js/navigation.js
 
-<style>
-/* ===== ESTILO BASE (NO CAMBIADO) ===== */
-body{
-  font-family:-apple-system,BlinkMacSystemFont,Helvetica,Arial;
-  background:#0f172a;
-  color:#fff;
-  margin:0;
-  padding:20px;
-}
-.card{
-  background:#020617;
-  border-radius:18px;
-  padding:20px;
-  box-shadow:0 0 25px rgba(34,197,94,.25);
-}
-button{
-  width:100%;
-  padding:16px;
-  border-radius:14px;
-  border:none;
-  background:#22c55e;
-  color:#000;
-  font-size:17px;
-  font-weight:600;
-  margin-top:14px;
-}
-button.secondary{background:#38bdf8}
-#log{
-  margin-top:16px;
-  font-size:14px;
-  color:#94a3b8;
-  white-space:pre-line;
-}
-img{
-  width:100%;
-  max-height:45vh;
-  object-fit:contain;
-  border-radius:12px;
-  margin-top:12px;
-}
-
-/* ===== SOLO ENCABEZADO NUEVO ===== */
-h1{
-  text-align:center;
-  font-family: "Courier New", monospace;
-  letter-spacing:3px;
-  font-size:26px;
-  color:#22c55e;
-  text-shadow:
-    0 0 5px #22c55e,
-    0 0 10px #22c55e,
-    0 0 20px #16a34a;
-  animation: neon 1.5s infinite alternate;
-}
-@keyframes neon{
-  from{ text-shadow:0 0 5px #22c55e; }
-  to{ text-shadow:0 0 20px #22c55e,0 0 40px #16a34a; }
-}
-</style>
-</head>
-
-<body>
-<div class="card">
-  <h1>UBER PRO GPS</h1>
-
-  <input type="file" id="fileInput" accept="image/*" />
-  <img id="preview" />
-
-  <button onclick="analyzeImage()">Analizar trayecto</button>
-  <button class="secondary" onclick="navigatePro()">Navegar PRO</button>
-
-  <div id="log"></div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
-
-<script>
-let currentCoords = null;
-
-const fileInput = document.getElementById('fileInput');
-const preview   = document.getElementById('preview');
-const logBox    = document.getElementById('log');
-
-fileInput.onchange = e => {
-  const file = e.target.files[0];
-  if(!file) return;
-  preview.src = URL.createObjectURL(file);
-  log('Imagen preparada para OCR');
-};
-
-function log(t){ logBox.innerText = t; }
-
-async function analyzeImage(){
-  if(!fileInput.files[0]){
-    log('Selecciona una imagen primero');
+async function navigatePro() {
+  if (!currentCoords) {
+    log('❌ Primero analiza la imagen');
     return;
   }
 
-  log('Iniciando OCR (puede tardar)…');
+  const [lat, lon] = currentCoords.split(',').map(s => s.trim());
+  const sygicUrl = `com.sygic.aura://coordinate|${lat}|${lon}`;
+  const appleMapsUrl = `https://maps.apple.com/?q=${lat},${lon}`;
+  const googleMapsUrl = `https://www.google.com/maps/search/?api=1&query=${lat},${lon}`;
 
-  try{
-    const res = await Tesseract.recognize(
-      fileInput.files[0],
-      'eng',
-      { logger:m=>{} }
-    );
+  // Si estamos en Capacitor (app nativa) intentamos usar plugin nativo para canOpenURL
+  if (window.Capacitor) {
+    try {
+      // 1) pedir al plugin nativo si Sygic puede abrirse
+      const { isInstalled } = await window.SygicChecker?.isInstalled({ scheme: 'com.sygic.aura' }) || { isInstalled: false };
 
-    const text = res.data.text;
-    const match = text.match(/(-?\d{1,2}\.\d+)\s*,\s*(-?\d{1,3}\.\d+)/);
-
-    if(!match) throw new Error('Coordenadas no encontradas');
-
-    currentCoords = `${match[1]},${match[2]}`;
-    await navigator.clipboard.writeText(currentCoords);
-
-    log(
-      'Coordenadas detectadas:\n' +
-      currentCoords +
-      '\n\nCopiadas al portapapeles'
-    );
-
-  }catch(err){
-    console.error(err);
-    log('Error al procesar la imagen');
-  }
-}
-
-function navigatePro(){
-  if(!currentCoords){
-    log('Primero analiza una imagen');
-    return;
+      if (isInstalled) {
+        // abrir Sygic
+        await window.Capacitor.Plugins.App.openUrl({ url: sygicUrl });
+        return;
+      } else {
+        // abrir Apple Maps (mejor experiencia iOS)
+        await window.Capacitor.Plugins.App.openUrl({ url: appleMapsUrl });
+        return;
+      }
+    } catch (err) {
+      console.warn('Capacitor openUrl error, fallback a Apple Maps', err);
+      window.location.href = appleMapsUrl;
+      return;
+    }
   }
 
-  const sygicURL  = `com.sygic.aura://coordinate|${currentCoords}`;
-  const googleURL = `https://maps.google.com/?q=${currentCoords}`;
-
-  log('Intentando abrir Sygic…');
-
-  // Intento DIRECTO SYGIC (iOS)
-  const iframe = document.createElement('iframe');
-  iframe.style.display = 'none';
-  iframe.src = sygicURL;
-  document.body.appendChild(iframe);
-
-  // Fallback automático
-  setTimeout(()=>{
-    window.location.href = googleURL;
-  },1200);
+  // WEB / PWA fallback: intentar abrir Sygic scheme y luego Google
+  try {
+    const a = document.createElement('a');
+    a.href = sygicUrl;
+    a.style.display = 'none';
+    document.body.appendChild(a);
+    a.click();
+    document.body.removeChild(a);
+    setTimeout(() => {
+      window.location.href = googleMapsUrl;
+    }, 1200);
+  } catch (e) {
+    window.location.href = googleMapsUrl;
+  }
 }
-</script>
-</body>
-</html>
