--- a/index.html
+++ b/index.html
@@ -1,51 +1,222 @@
-// navigation-capacitor-ready.js
-// Usar esto en tu index.html o importarlo como js/navigation.js
+<!DOCTYPE html>
+<html lang="es">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Uber Pro GPS</title>
 
-async function navigatePro() {
-  if (!currentCoords) {
-    log('❌ Primero analiza la imagen');
-    return;
-  }
+<script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
 
-  const [lat, lon] = currentCoords.split(',').map(s => s.trim());
-  const sygicUrl = `com.sygic.aura://coordinate|${lat}|${lon}`;
-  const appleMapsUrl = `https://maps.apple.com/?q=${lat},${lon}`;
-  const googleMapsUrl = `https://www.google.com/maps/search/?api=1&query=${lat},${lon}`;
-
-  // Si estamos en Capacitor (app nativa) intentamos usar plugin nativo para canOpenURL
-  if (window.Capacitor) {
-    try {
-      // 1) pedir al plugin nativo si Sygic puede abrirse
-      const { isInstalled } = await window.SygicChecker?.isInstalled({ scheme: 'com.sygic.aura' }) || { isInstalled: false };
-
-      if (isInstalled) {
-        // abrir Sygic
-        await window.Capacitor.Plugins.App.openUrl({ url: sygicUrl });
-        return;
-      } else {
-        // abrir Apple Maps (mejor experiencia iOS)
-        await window.Capacitor.Plugins.App.openUrl({ url: appleMapsUrl });
-        return;
-      }
-    } catch (err) {
-      console.warn('Capacitor openUrl error, fallback a Apple Maps', err);
-      window.location.href = appleMapsUrl;
-      return;
-    }
-  }
-
-  // WEB / PWA fallback: intentar abrir Sygic scheme y luego Google
-  try {
-    const a = document.createElement('a');
-    a.href = sygicUrl;
-    a.style.display = 'none';
-    document.body.appendChild(a);
-    a.click();
-    document.body.removeChild(a);
-    setTimeout(() => {
-      window.location.href = googleMapsUrl;
-    }, 1200);
-  } catch (e) {
-    window.location.href = googleMapsUrl;
-  }
+<style>
+body{
+  margin:0;
+  padding:0;
+  font-family:-apple-system, BlinkMacSystemFont, system-ui;
+  background:radial-gradient(circle at top,#020617,#000);
+  color:#fff;
+  display:flex;
+  justify-content:center;
 }
+
+.card{
+  width:100%;
+  max-width:420px;
+  margin:16px;
+  padding:18px;
+  border-radius:20px;
+  background:#020617;
+  position:relative;
+  box-shadow:0 0 0 1px rgba(148,163,184,.15),
+             0 30px 60px rgba(0,0,0,.7);
+  animation:fadeIn .8s ease;
+}
+
+.card::before{
+  content:"";
+  position:absolute;
+  inset:-2px;
+  border-radius:22px;
+  background:linear-gradient(120deg,#22c55e,#38bdf8,#22c55e);
+  z-index:-1;
+  animation:borderGlow 6s linear infinite;
+}
+
+@keyframes borderGlow{
+  0%{filter:hue-rotate(0deg)}
+  100%{filter:hue-rotate(360deg)}
+}
+
+@keyframes fadeIn{
+  from{opacity:0;transform:translateY(10px)}
+  to{opacity:1}
+}
+
+h1{
+  text-align:center;
+  font-size:20px;
+  margin-bottom:10px;
+}
+
+input[type=file]{
+  width:100%;
+  margin-top:10px;
+}
+
+img{
+  width:100%;
+  max-height:35vh;
+  object-fit:contain;
+  border-radius:14px;
+  margin-top:12px;
+  background:#000;
+}
+
+button{
+  width:100%;
+  padding:15px;
+  margin-top:12px;
+  border-radius:14px;
+  border:none;
+  font-size:16px;
+  font-weight:600;
+  background:#22c55e;
+  color:#000;
+}
+
+button.secondary{background:#38bdf8}
+button.gray{background:#64748b;color:#fff}
+button:disabled{opacity:.4}
+
+.status{
+  margin-top:10px;
+  font-size:14px;
+  color:#94a3b8;
+}
+
+.coords{
+  margin-top:10px;
+  padding:10px;
+  border-radius:12px;
+  background:#020617;
+  border:1px solid rgba(148,163,184,.15);
+}
+
+.history{
+  margin-top:12px;
+  font-size:14px;
+  color:#94a3b8;
+}
+
+/* Consola */
+#debug{
+  margin-top:12px;
+  font-size:12px;
+  background:#000;
+  padding:8px;
+  border-radius:10px;
+  max-height:120px;
+  overflow:auto;
+}
+</style>
+</head>
+
+<body>
+<div class="card">
+<h1>🚗 Uber Pro GPS</h1>
+
+<input type="file" id="fileInput" accept="image/*">
+<img id="preview">
+
+<button id="analyzeBtn">Analizar Trayecto</button>
+
+<div class="status" id="status">Estado: esperando imagen</div>
+
+<div class="coords" id="coords">
+Latitud: —<br>Longitud: —<br>App: —
+</div>
+
+<button id="navigateBtn" class="secondary" disabled>Navegar PRO</button>
+
+<div class="history" id="history"></div>
+
+<div id="debug"><b>DEBUG:</b><br></div>
+</div>
+
+<script>
+/* ================= DEBUG ================= */
+const debug = msg=>{
+  document.getElementById("debug").innerHTML+=msg+"<br>";
+};
+
+/* ================= VARS ================= */
+let lat=null,lng=null,appDetectada="—";
+
+/* ================= IMAGE ================= */
+fileInput.onchange=e=>{
+  const f=e.target.files[0];
+  if(!f)return;
+  preview.src=URL.createObjectURL(f);
+  status.textContent="Estado: Imagen preparada para OCR";
+  debug("Imagen cargada");
+};
+
+/* ================= OCR ================= */
+analyzeBtn.onclick=async()=>{
+  status.textContent="Estado: OCR en proceso…";
+  try{
+    const r=await Tesseract.recognize(preview.src,"eng");
+    const t=r.data.text;
+    debug("Texto OCR capturado");
+
+    if(/uber/i.test(t)) appDetectada="Uber";
+    if(/didi/i.test(t)) appDetectada="Didi";
+
+    const m=t.match(/(-?\d{1,2}\.\d+)[,\s]+(-?\d{1,3}\.\d+)/);
+    if(!m) throw "Sin coordenadas";
+
+    lat=m[1]; lng=m[2];
+
+    coords.innerHTML=`
+      Latitud: <b>${lat}</b><br>
+      Longitud: <b>${lng}</b><br>
+      App: <b>${appDetectada}</b>
+    `;
+
+    guardarHistorial();
+    navigateBtn.disabled=false;
+    status.textContent="Estado: Coordenadas detectadas";
+  }catch(e){
+    debug("ERROR OCR");
+    status.textContent="Error al analizar imagen";
+  }
+};
+
+/* ================= HISTORIAL ================= */
+function guardarHistorial(){
+  const h=JSON.parse(localStorage.getItem("historial")||"[]");
+  h.unshift({lat,lng,app:appDetectada,fecha:new Date().toLocaleString()});
+  localStorage.setItem("historial",JSON.stringify(h.slice(0,5)));
+  mostrarHistorial();
+}
+
+function mostrarHistorial(){
+  const h=JSON.parse(localStorage.getItem("historial")||"[]");
+  history.innerHTML="<b>Historial:</b><br>"+h.map(x=>
+    `• ${x.app} → ${x.lat},${x.lng}`
+  ).join("<br>");
+}
+mostrarHistorial();
+
+/* ================= NAVEGAR ================= */
+navigateBtn.onclick=()=>{
+  const google=`https://maps.google.com/?q=${lat},${lng}`;
+  if(window.Capacitor){
+    window.location.href=`com.sygic.aura://coordinate|${lat},${lng}`;
+  }else{
+    alert("Sygic directo solo disponible en App iOS.\nSe abrirá Google Maps.");
+    window.open(google,"_blank");
+  }
+};
+</script>
+</body>
+</html>
