--- a/index.html
+++ b/index.html
@@ -84,7 +84,6 @@ button{
 }
 
 button.secondary{background:#38bdf8}
-button.gray{background:#64748b;color:#fff}
 button:disabled{opacity:.4}
 
 .status{
@@ -107,7 +106,7 @@ button:disabled{opacity:.4}
   color:#94a3b8;
 }
 
-/* Consola */
+/* Consola debug */
 #debug{
   margin-top:12px;
   font-size:12px;
@@ -116,6 +115,28 @@ button:disabled{opacity:.4}
   border-radius:10px;
   max-height:120px;
   overflow:auto;
+}
+
+/* ===== TOAST ===== */
+.toast{
+  position:fixed;
+  bottom:20px;
+  left:50%;
+  transform:translateX(-50%) translateY(20px);
+  background:#22c55e;
+  color:#000;
+  padding:10px 16px;
+  border-radius:14px;
+  font-size:14px;
+  font-weight:600;
+  opacity:0;
+  pointer-events:none;
+  transition:all .3s ease;
+  box-shadow:0 10px 30px rgba(0,0,0,.6);
+}
+.toast.show{
+  opacity:1;
+  transform:translateX(-50%) translateY(0);
 }
 </style>
 </head>
@@ -142,6 +163,8 @@ Latitud: —<br>Longitud: —<br>App: —
 <div id="debug"><b>DEBUG:</b><br></div>
 </div>
 
+<div id="toast" class="toast">📋 Coordenadas copiadas</div>
+
 <script>
 /* ================= DEBUG ================= */
 const debug = msg=>{
@@ -150,6 +173,13 @@ const debug = msg=>{
 
 /* ================= VARS ================= */
 let lat=null,lng=null,appDetectada="—";
+
+/* ================= TOAST ================= */
+function showToast(){
+  const t=document.getElementById("toast");
+  t.classList.add("show");
+  setTimeout(()=>t.classList.remove("show"),2000);
+}
 
 /* ================= IMAGE ================= */
 fileInput.onchange=e=>{
@@ -174,26 +204,19 @@ analyzeBtn.onclick=async()=>{
     const m=t.match(/(-?\d{1,2}\.\d+)[,\s]+(-?\d{1,3}\.\d+)/);
     if(!m) throw "Sin coordenadas";
 
-    lat=m[1]; lng=m[2];
+    lat=m[1];
+    lng=m[2];
 
-    // Mostrar coordenadas
     coords.innerHTML=`
       Latitud: <b>${lat}</b><br>
       Longitud: <b>${lng}</b><br>
       App: <b>${appDetectada}</b>
     `;
 
-    // ###########################
-    // CAMBIO SOLICITADO: copiar automáticamente "lat,lng" al portapapeles
-    // ###########################
-    const coordsToCopy = `${lat},${lng}`; // formato EXACTO con una sola coma, sin espacios
-    try{
-      await navigator.clipboard.writeText(coordsToCopy);
-      debug("Coordenadas copiadas al portapapeles: " + coordsToCopy);
-    }catch(err){
-      debug("Fallo al copiar al portapapeles: " + (err && err.message ? err.message : err));
-    }
-    // ###########################
+    const coordsToCopy = `${lat},${lng}`;
+    await navigator.clipboard.writeText(coordsToCopy);
+    debug("Coordenadas copiadas: "+coordsToCopy);
+    showToast();
 
     guardarHistorial();
     navigateBtn.disabled=false;
