--- a/index.html
+++ b/index.html
@@ -11,41 +11,60 @@ body{margin:0;padding:0;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",
 .card{width:100%;max-width:400px;margin:20px;padding:24px;border-radius:24px;background:#020617;position:relative;box-shadow:0 0 0 1px rgba(148,163,184,.15),0 20px 40px -10px rgba(0,0,0,.5);animation:slideUp .6s ease-out}
 .card::before{content:"";position:absolute;inset:-2px;border-radius:26px;background:linear-gradient(45deg,#22c55e,#0ea5e9,#22c55e);z-index:-1;filter:blur(1px);opacity:.6;animation:borderRotate 4s linear infinite}
 
-/* Animaciones Clave */
+/* Animaciones */
 @keyframes slideUp{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
-@keyframes borderRotate{0%{filter:hue-rotate(0deg) blur(1px)}100%{filter:hue-rotate(360deg) blur(1px)}}
-@keyframes pulse{50%{opacity:.5}}
-@keyframes fadeIn{from{opacity:0}to{opacity:1}}
+@keyframes borderRotate{0%{filter:hue-rotate(0deg)}100%{filter:hue-rotate(360deg)}}
+@keyframes pulseGlow{0%{box-shadow:0 0 5px rgba(34,197,94,0.2)}50%{box-shadow:0 0 20px rgba(34,197,94,0.5)}100%{box-shadow:0 0 5px rgba(34,197,94,0.2)}}
+@keyframes pulseText{50%{opacity:.5}}
 
-/* Tipografía y Elementos */
 h1{text-align:center;font-size:22px;margin:0 0 20px 0;font-weight:700;letter-spacing:-0.5px}
-input[type=file]{width:100%;padding:10px;background:rgba(255,255,255,0.05);border-radius:12px;margin-bottom:15px;color:#94a3b8;font-size:14px}
+input[type=file]{width:100%;padding:12px;background:rgba(255,255,255,0.05);border-radius:12px;margin-bottom:15px;color:#94a3b8;font-size:14px;border:1px dashed rgba(148,163,184,0.3)}
 
-/* Imagen y Estado */
 img{width:100%;max-height:300px;object-fit:contain;border-radius:16px;margin-top:10px;background:rgba(0,0,0,0.3);display:none;opacity:0;transition:opacity .4s ease}
 img.loaded{display:block;opacity:1}
-.status{margin-top:15px;font-size:14px;color:#94a3b8;text-align:center;font-weight:500;transition:all .3s}
-.status.analyzing{color:#22c55e;animation:pulse 1.5s infinite ease-in-out}
 
-/* Área de Resultados (Tap to copy) */
-.coords-container {margin-top:15px; perspective: 1000px;}
-.coords{padding:16px;border-radius:16px;background:rgba(255,255,255,0.03);border:1px solid rgba(22,163,74,0.2);cursor:pointer;transition:all .2s ease;opacity:0;transform:translateY(10px);pointer-events:none}
+.status{margin-top:15px;font-size:14px;color:#94a3b8;text-align:center;font-weight:500}
+.status.analyzing{color:#22c55e;animation:pulseText 1.5s infinite ease-in-out}
+
+/* RECUADRO DE COORDENADAS MEJORADO */
+.coords-container {margin-top:20px; perspective: 1000px;}
+.coords{
+  padding:20px;
+  border-radius:20px;
+  background:rgba(22,163,74,0.05);
+  border: 2px solid #22c55e; /* Borde más grueso */
+  cursor:pointer;
+  transition:all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+  opacity:0;
+  transform:translateY(10px);
+  pointer-events:none;
+  text-align: center;
+  animation: pulseGlow 3s infinite; /* Efecto de brillo alrededor */
+}
 .coords.show{opacity:1;transform:translateY(0);pointer-events:auto}
-.coords:active{background:rgba(22,163,74,0.1);transform:scale(0.98)}
-.coords b{color:#22c55e;font-size:1.1em}
-.label{color:#94a3b8;font-size:0.9em;display:block;margin-bottom:4px}
-.coord-value{font-family:monospace;font-size:1.2em;letter-spacing:-0.5px}
+.coords:active{transform:scale(0.95);background:rgba(22,163,74,0.15)}
+.coords b{color:#22c55e;font-size:1.3em;text-shadow: 0 0 10px rgba(34,197,94,0.5)}
+.label{color:#94a3b8;font-size:0.85em;text-transform:uppercase;letter-spacing:1px;margin-bottom:4px;display:block}
+.coord-value{font-family:'Courier New', monospace;font-weight:bold}
+
+.tap-hint {
+  margin-top:12px;
+  font-size:13px;
+  color:#22c55e;
+  font-weight:600;
+  text-align:center;
+  display:block;
+}
 
 /* Botones */
-button{width:100%;padding:16px;margin-top:12px;border-radius:16px;border:none;font-size:16px;font-weight:700;background:#22c55e;color:#000;cursor:pointer;transition:transform .1s ease, background .2s ease, opacity .2s ease;box-shadow:0 4px 12px rgba(34,197,94,0.3)}
+button{width:100%;padding:16px;margin-top:12px;border-radius:16px;border:none;font-size:16px;font-weight:700;background:#22c55e;color:#000;cursor:pointer;transition:all .2s ease;box-shadow:0 4px 15px rgba(34,197,94,0.3)}
 button:active{transform:scale(0.96)}
-button.gray{background:#334155;color:#fff;box-shadow:0 4px 12px rgba(0,0,0,0.2)}
-button.danger{background:transparent;color:#ef4444;box-shadow:none;border:1px solid rgba(239,68,68,0.3);padding:12px;margin-top:20px}
-button:disabled{opacity:.5;cursor:not-allowed;box-shadow:none;transform:none}
+button.danger{background:transparent;color:#ef4444;box-shadow:none;border:1px solid rgba(239,68,68,0.3);padding:12px;margin-top:25px}
+button:disabled{opacity:.4;cursor:not-allowed}
 
 /* Copyright y Toast */
-.copyright{margin-top:24px;text-align:center;font-size:11px;color:#64748b;letter-spacing:1px;text-transform:uppercase;opacity:0.7}
-.toast{position:fixed;bottom:30px;left:50%;transform:translateX(-50%) translateY(40px);background:#22c55e;color:#000;padding:12px 20px;border-radius:30px;font-size:14px;font-weight:700;opacity:0;transition:all .4s cubic-bezier(0.175, 0.885, 0.32, 1.275);z-index:100;box-shadow:0 10px 25px -5px rgba(34,197,94,0.5);pointer-events:none}
+.copyright{margin-top:30px;text-align:center;font-size:11px;color:#475569;letter-spacing:1px;font-weight:600}
+.toast{position:fixed;bottom:30px;left:50%;transform:translateX(-50%) translateY(40px);background:#22c55e;color:#000;padding:12px 24px;border-radius:30px;font-size:14px;font-weight:800;opacity:0;transition:all .4s cubic-bezier(0.175, 0.885, 0.32, 1.275);z-index:100;box-shadow:0 10px 25px rgba(34,197,94,0.4)}
 .toast.show{opacity:1;transform:translateX(-50%) translateY(0)}
 </style>
 </head>
@@ -59,23 +78,28 @@ button:disabled{opacity:.5;cursor:not-allowed;box-shadow:none;transform:none}
   
   <button id="analyzeBtn">🔍 Analizar Captura</button>
   
-  <div class="status" id="status">Selecciona una imagen</div>
+  <div class="status" id="status">Espera de imagen...</div>
 
   <div class="coords-container">
     <div class="coords" id="coordsBlock" onclick="copiarAlPortapapeles()">
-      <div><span class="label">Latitud</span><b class="coord-value" id="latVal">—</b></div>
-      <div style="margin-top:10px"><span class="label">Longitud</span><b class="coord-value" id="lngVal">—</b></div>
-      <div style="margin-top:8px;font-size:12px;color:#22c55e;text-align:right">👆 Toca para copiar</div>
+      <div>
+        <span class="label">Latitud</span>
+        <b class="coord-value" id="latVal">—</b>
+      </div>
+      <div style="margin-top:15px">
+        <span class="label">Longitud</span>
+        <b class="coord-value" id="lngVal">—</b>
+      </div>
+      <span class="tap-hint">👆 Toca para copiar</span>
     </div>
   </div>
 
-  <button id="copyBtn" class="gray" disabled>📋 Copiar Coordenadas</button>
   <button id="resetBtn" class="danger">🔄 Nueva Consulta</button>
 
-  <div class="copyright">@Osiany2026</div>
+  <div class="copyright">@Copyright: Osiany2026</div>
 </div>
 
-<div id="toast" class="toast">✅ ¡Coordenadas Copiadas!</div>
+<div id="toast" class="toast">✅ COPIADO CON ÉXITO</div>
 
 <script>
 let lat = null, lng = null;
@@ -83,65 +107,49 @@ const statusEl = document.getElementById("status");
 const coordsBlock = document.getElementById("coordsBlock");
 const previewImg = document.getElementById("preview");
 
-// --- FUNCIÓN DE COPIADO (Síncrona para iOS) ---
 function copiarAlPortapapeles() {
   if(!lat || !lng) return;
-  
   const texto = lat + "," + lng;
-  // Método "antiguo" pero fiable en Safari iOS tras un click
   const el = document.createElement('textarea');
   el.value = texto;
-  el.setAttribute('readonly', ''); // Evita teclado en iOS
+  el.setAttribute('readonly', '');
   el.style.position = 'absolute';
   el.style.left = '-9999px';
   document.body.appendChild(el);
   el.select();
-  el.setSelectionRange(0, 99999); // Extra para iOS
-  
-  try {
-    document.execCommand('copy');
-    mostrarToast();
-    if(navigator.vibrate) navigator.vibrate(50); // Pequeña vibración si el dispositivo lo soporta
-  } catch (err) {
-    statusEl.textContent = "Error al copiar";
-  }
+  document.execCommand('copy');
   document.body.removeChild(el);
-}
-
-function mostrarToast() {
+  
   const t = document.getElementById("toast");
   t.classList.add("show");
-  setTimeout(() => t.classList.remove("show"), 2500);
+  if(navigator.vibrate) navigator.vibrate(40);
+  setTimeout(() => t.classList.remove("show"), 2000);
 }
 
-// --- CARGA DE IMAGEN ---
 document.getElementById("fileInput").onchange = e => {
   const f = e.target.files[0];
   if(!f) return;
   previewImg.src = URL.createObjectURL(f);
-  previewImg.classList.add("loaded"); // Animación fade-in
-  statusEl.textContent = "Imagen lista. Toca 'Analizar'.";
-  statusEl.className = "status";
+  previewImg.classList.add("loaded");
+  statusEl.textContent = "Imagen cargada. Pulsa Analizar.";
 };
 
-// --- ANÁLISIS OCR ---
 document.getElementById("analyzeBtn").onclick = async () => {
   if(!previewImg.src || previewImg.src === "") {
-    statusEl.textContent = "⚠️ Primero selecciona una imagen";
+    alert("Selecciona una captura primero");
     return;
   }
   
-  statusEl.textContent = "Analizando imagen... ⏳";
-  statusEl.className = "status analyzing"; // Animación pulso
+  statusEl.textContent = "Procesando coordenadas... ⏳";
+  statusEl.className = "status analyzing";
   document.getElementById("analyzeBtn").disabled = true;
-  coordsBlock.classList.remove("show"); // Ocultar resultados previos
+  coordsBlock.classList.remove("show");
   
   try {
     const r = await Tesseract.recognize(previewImg.src, "eng");
-    // Regex ajustada para ser más permisiva con espacios
     const m = r.data.text.match(/(-?\d{1,2}\.\d+)[,\s\n]+(-?\d{1,3}\.\d+)/);
     
-    if(!m) throw "No se encontraron coordenadas válidas.";
+    if(!m) throw "No se detectaron coordenadas.";
 
     lat = m[1];
     lng = m[2];
@@ -149,28 +157,20 @@ document.getElementById("analyzeBtn").onclick = async () => {
     document.getElementById("latVal").textContent = lat;
     document.getElementById("lngVal").textContent = lng;
     
-    coordsBlock.classList.add("show"); // Animación entrada resultados
-    document.getElementById("copyBtn").disabled = false;
-    statusEl.textContent = "✅ ¡Coordenadas detectadas!";
+    coordsBlock.classList.add("show");
+    statusEl.textContent = "✅ Análisis Finalizado";
     statusEl.className = "status";
 
   } catch(e) {
     statusEl.textContent = "❌ Error: " + e;
     statusEl.className = "status";
-    coordsBlock.classList.remove("show");
   } finally {
     document.getElementById("analyzeBtn").disabled = false;
   }
 };
 
-// --- EVENTOS DE BOTONES ---
-// El click en el div 'coordsBlock' ya se maneja en el HTML con onclick="copiarAlPortapapeles()"
-document.getElementById("copyBtn").onclick = copiarAlPortapapeles;
-
 document.getElementById("resetBtn").onclick = () => {
-  // Recarga suave
-  document.querySelector('.card').style.opacity = '0';
-  setTimeout(() => location.reload(), 200);
+  location.reload();
 };
 </script>
 </body>
