--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <img id="preview">
     </div>
     
-    <button id="analyzeBtn" class="btn-analyze">EXE. SCAN_VISION</button>
+    <button id="analyzeBtn" class="btn-analyze">SCAN_VISION</button>
     
     <div id="status" style="text-align:center; margin-top:12px; font-size:12px; color:var(--neon-blue);">SISTEMA ONLINE</div>
 
@@ -274,3 +274,4 @@ renderHistory();
 </script>
 </body>
 </html>
+
