--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Ubertron Pro-Vision v4.0 Supreme</title>
+    <title>Ubertron Pro-Vision v4.1</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@500;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js"></script>
     <style>
@@ -23,7 +23,6 @@
             overflow: hidden;
         }
 
-        /* --- FONDO CYBER GRID --- */
         .background-grid {
             position: fixed; top: 0; left: 0; width: 100%; height: 100%;
             background-image: linear-gradient(rgba(0, 212, 255, 0.05) 1px, transparent 1px),
@@ -33,7 +32,6 @@
         }
         @keyframes gridMove { from { transform: translateY(0); } to { transform: translateY(30px); } }
 
-        /* --- CHASIS IPHONE --- */
         .iphone-frame {
             width: 90vw; max-width: 385px; height: 92vh;
             background: var(--iphone-silver); border-radius: 55px;
@@ -49,7 +47,6 @@
         }
         .screen::-webkit-scrollbar { display: none; }
 
-        /* Notch con Sensores */
         .notch {
             width: 160px; height: 28px; background: #000;
             position: sticky; top: 0; left: 50%; transform: translateX(-50%);
@@ -58,15 +55,12 @@
         }
         .notch::after { content: ""; width: 40px; height: 4px; background: #111; border-radius: 10px; }
 
-        /* Barra de Estado */
         .status-bar {
             display: flex; justify-content: space-between; padding: 12px 30px 0;
             font-size: 12px; font-weight: bold; color: #fff;
         }
 
-        /* --- UI ELEMENTS --- */
         .app-body { padding: 20px; text-align: center; }
-
         .date-display { font-family: 'Orbitron'; font-size: 10px; color: var(--neon-blue); margin-bottom: 5px; }
 
         h1 {
@@ -105,12 +99,17 @@
         .btn-share { background: var(--neon-blue); color: #000; display: none; }
         .btn:active { transform: scale(0.96); opacity: 0.8; }
 
+        /* AJUSTE AQUÍ: COORDENADAS MÁS PEQUEÑAS */
         .result-text {
-            font-family: 'Orbitron'; font-size: 1.7rem; color: #fff;
-            text-shadow: 0 0 15px var(--neon-green); margin: 15px 0; display: none;
+            font-family: 'Orbitron'; 
+            font-size: 1.2rem; /* Tamaño reducido para mejor ajuste */
+            color: #fff;
+            text-shadow: 0 0 15px var(--neon-green); 
+            margin: 15px 0; 
+            display: none;
+            word-break: break-all; /* Evita que el texto se salga si es muy largo */
         }
 
-        /* COPYRIGHT SUPREMO */
         .copyright-banner {
             margin-top: 30px; font-family: 'Orbitron'; font-size: 14px;
             color: var(--neon-blue); font-weight: 900; display: block;
@@ -139,7 +138,7 @@
 
         <div class="app-body">
             <div class="date-display" id="fullDate">LOADING...</div>
-            <h1>UBERTRON v4.0</h1>
+            <h1>UBERTRON v4.1</h1>
 
             <div class="cyber-panel">
                 <span style="font-size: 10px; color: var(--neon-blue); letter-spacing: 2px;">SOURCE_DATA_FILE 📁</span>
@@ -169,7 +168,6 @@
 </div>
 
 <script>
-    // --- SÍNTESIS DE AUDIO (SIN ARCHIVOS EXTERNOS) ---
     const audioCtx = new (window.AudioContext || window.webkitAudioContext)();
     function playSound(freq, type, duration) {
         const osc = audioCtx.createOscillator();
@@ -180,7 +178,6 @@
         osc.start(); osc.stop(audioCtx.currentTime + duration);
     }
 
-    // Reloj
     function updateClock() {
         const now = new Date();
         document.getElementById('fullDate').textContent = now.toLocaleDateString('es-ES', { 
@@ -220,9 +217,7 @@
             document.getElementById("shareBtn").style.display = "block";
             document.getElementById("status").textContent = "[ STATUS: SUCCESS ✅ ]";
             
-            // Sonido de éxito y vibración
             playSound(1200, 'sine', 0.2);
-            setTimeout(() => playSound(1500, 'sine', 0.3), 100);
             if(navigator.vibrate) navigator.vibrate([100, 50, 100]);
 
         } catch(e) {
