--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
     <div id="root"></div>
     <!-- Cargamos directamente el archivo transpilado -->
     <script src="App_stable.js"></script>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('./sw.js')
+                    .then(reg => console.log('SW Registered', reg))
+                    .catch(err => console.log('SW Error', err));
+            });
+        }
+    </script>
 </body>
 
 </html>
